@@ -13,6 +13,7 @@ import com.covenant.tribe.dto.event.RequestTemplateForCreatingEventDTO;
 import com.covenant.tribe.dto.event.SearchEventDTO;
 import com.covenant.tribe.dto.user.UsersWhoParticipantsOfEventDTO;
 import com.covenant.tribe.exeption.event.EventNotFoundException;
+import com.covenant.tribe.dto.event.*;
 import com.covenant.tribe.exeption.user.UserNotFoundException;
 import com.covenant.tribe.repository.EventTypeRepository;
 import com.covenant.tribe.repository.TagRepository;
@@ -27,7 +28,7 @@ import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Component;
 
 import java.time.Duration;
-import java.time.LocalDateTime;
+import java.time.OffsetDateTime;
 import java.util.List;
 import java.util.Objects;
 import java.util.Set;
@@ -102,8 +103,68 @@ public class EventMapperImpl implements EventMapper {
                 .eventName(event.getEventName())
                 .eventAddress(eventAddressMapper.mapToEventAddressDTO(event.getEventAddress()))
                 .startTime(event.getStartTime())
-                .isFinished(event.getEndTime().isBefore(LocalDateTime.now()))
+                .isFinished(event.getEndTime().isBefore(OffsetDateTime.now()))
                 .build();
+    }
+
+    private List<String> getEventAvatars(Set<EventAvatar> eventAvatars) {
+        return eventAvatars.stream()
+                .map(EventAvatar::getAvatarUrl)
+                .toList();
+    }
+
+    private boolean isEventViewed(Event event, Long userId) {
+        UserRelationsWithEvent currentUserRelations = event.getEventRelationsWithUser().stream()
+                .filter(userRelationsWithEvent ->
+                        userRelationsWithEvent
+                                .getUserRelations()
+                                .getId()
+                                .equals(userId)
+                )
+                .findFirst()
+                .orElseThrow(() -> {
+                    String message = String.format(
+                            "There isn't User with id %s in this event", userId
+                    );
+                    log.error(message);
+                    return new UserNotFoundException(message);
+                });
+        return currentUserRelations.isViewed();
+    }
+
+    @Override
+    public EventInUserProfileDTO mapToEventInUserProfileDTO(Event event) {
+        return EventInUserProfileDTO.builder()
+                .id(event.getId())
+                .eventPhotoUrl(getEventAvatars(event.getEventAvatars()))
+                .eventName(event.getEventName())
+                .city(event.getEventAddress().getCity())
+                .startTime(event.getStartTime())
+                .isViewed(isEventViewed(event, event.getOrganizer().getId()))
+                .build();
+    }
+
+    @Override
+    public EventVerificationDTO mapToEventVerificationDTO(Event event) {
+        return EventVerificationDTO.builder()
+                .eventId(event.getId())
+                .organizerId(event.getOrganizer().getId())
+                .createdAt(event.getCreatedAt())
+                .eventAddress(eventAddressMapper.mapToEventAddressDTO(event.getEventAddress()))
+                .eventName(event.getEventName())
+                .eventDescription(event.getEventDescription())
+                .startTime(event.getStartTime())
+                .endTime(event.getEndTime())
+                .eighteenYearLimit(event.isEighteenYearLimit())
+                .eventType(event.getEventType().getTypeName())
+                .eventTags(getEventTagNames(event.getTagList()))
+                .build();
+    }
+
+    private List<String> getEventTagNames(List<Tag> eventTags) {
+        return eventTags.stream()
+                .map(Tag::getTagName)
+                .collect(Collectors.toList());
     }
 
     public Event mapToEvent(
@@ -147,6 +208,19 @@ public class EventMapperImpl implements EventMapper {
                 .build();
         event.addTagList(eventTags);
 
+        if (!dto.getNewEventTagNames().isEmpty()) {
+
+            Set<Tag> newTags = dto.getNewEventTagNames().stream()
+                    .map(String::toLowerCase)
+                    .filter(tagName -> tagRepository.findTagByTagName(tagName).isEmpty())
+                    .map(tagName -> Tag.builder().tagName(tagName).build())
+                    .collect(Collectors.toSet());
+            tagRepository.saveAll(newTags);
+            eventType.addTags(newTags);
+            eventTypeRepository.save(eventType);
+            event.addTagList(newTags.stream().toList());
+        }
+
         Set<EventAvatar> eventAvatars = dto.getAvatarsForAdding().stream()
                 .map(avatar -> eventAvatarMapper.mapToEventAvatar(avatar, event))
                 .collect(Collectors.toSet());
@@ -156,7 +230,7 @@ public class EventMapperImpl implements EventMapper {
 
         List<UserRelationsWithEvent> userRelationsWithEvents = invitedUsers.stream()
                 .map(user -> UserRelationsWithEvent.builder()
-                        .userRelations(organizer)
+                        .userRelations(user)
                         .eventRelations(event)
                         .isInvited(true)
                         .isParticipant(false)
@@ -164,7 +238,18 @@ public class EventMapperImpl implements EventMapper {
                         .isFavorite(false)
                         .isViewed(false)
                         .build()
-                ).toList();
+                ).collect(Collectors.toList());
+        userRelationsWithEvents.add(
+                UserRelationsWithEvent.builder()
+                        .userRelations(organizer)
+                        .eventRelations(event)
+                        .isInvited(false)
+                        .isParticipant(true)
+                        .isWantToGo(false)
+                        .isFavorite(false)
+                        .isViewed(false)
+                        .build()
+        );
         event.setEventAvatars(eventAvatars);
         event.addEventsRelationsWithUsers(userRelationsWithEvents);
         event.getOrganizer().addEventWhereUserAsOrganizer(event);
